Actually programmed in Ant successful package build